# digitalbreak24_hack

./: .env  .gitignore  Dockerfile  Dockerfile_Api  Dockerfile_Bot  FullLaunch.ipynb  Makefile  README.md  docker-compose.yml  main.ipynb  pyproject.toml  requirements.txt  test_api_and_diariz.ipynb  пример официального протокола.docx  пример протокола.docx
App/: main.py
App/Api/handlers/: __init__.py  handlers.py
App/Api/handlers/service/: service.py
App/Bot/: main.py
App/Bot/handlers/: add_meeting.py  basic.py  default_answer.py
App/Bot/handlers/meetings_actions/: all_actions.py  send_file.py  speakers.py
App/Bot/keyboards/: inline.py  keyboards.py
App/Bot/utils/: statesform.py
App/ML/: EvaProjectIntagration.py  LLM.py  Prompts.py  SpeechProcessing.py  TextTransformation.py  YaGPT.py  diarization.py
App/Postgres/deploy/: deploy_db.sql
App/files/raw_audio/: Встреча 8. Аудиозапись.m4a
App/src/: EvaProjectIntagration.py  Prompts.py
App/utils/: config.py
src/: EvaProjectIntagration.py  SpeechProcessing.py
